--- a/css/All_Courses.css
+++ b/css/All_Courses.css
@@ -2,7 +2,7 @@
 {
     margin-top:50px ;
     padding: 0;
-    box-shadow: 10px 10px 10px ;
+    box-shadow: 10px 10px 10px rgb(179, 177, 177);
     box-sizing: border-box;
     height: 60vh;
     border-radius: .75rem;
