--- a/css/about.css
+++ b/css/about.css
@@ -10,7 +10,7 @@ html {
 }
 /*navbar*/
 .navbar {
-    background-color: #f1faee;
+    background-color: #f0efeb;
 }
 .navbar-nav {
 margin-left: 10px;
@@ -24,13 +24,13 @@ font-size: 16px;
 color: #78797a;
 }
 .fa-search, .form-control {
-color: #1e4179;
+color: #001f54;
 font-weight: 450;
 font-size: 16px;
 border-radius: 4px;
 }
 #btn {
-background-color: #1e4179;
+background-color: #001f54;
 font-weight: 450;
 font-size: 16px;
 color: #ffffff;
@@ -66,7 +66,7 @@ section {
     border-radius: 5px;
 }
 .card-img {
-    background-color: #f1faee;
+    background-color: #f0efeb;
     width: 100%;
     height: 23rem;
     object-fit: cover;
@@ -133,5 +133,37 @@ section {
             opacity: 1;
         }
     }
- 
+}
+
+/*footer*/
+.footer {
+    padding: 20px 0;
+    background: #001f54;
+    padding-bottom: 0px;
+    margin-top: 100vh;
+    height: 130px;
+    }
+.social {
+    text-align: center;
+    color: #ffffff;
+    }
+.social a {
+    font-size: 30px;
+    display: inline-block;
+    text-align: center;
+    margin: 0 30px;
+    color: #ffffff;
+}
+.social a:hover {
+    opacity: 1;
+    color: #d7cfcf;
+}
+.copyright {
+    margin-top: 25px;
+    text-align: center;
+    font-weight: small;
+    font-size: 14px;
+    letter-spacing: 1px;
+    color:#ffffff;
+    font-family: "Times New Roman", Times, serif;
 }
