--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,7 @@ style.css
   display: flex;
   justify-content: space-between;
   align-items: center;
+  height: 90vh;
 }
 .content {
   max-width: 700px;
@@ -139,15 +140,14 @@ style.css
   padding: 20px 0;
   background: #001f54;
   padding-bottom: 0px;
-  margin-top: 100vh;
-  height: 130px;
+  height: 100px;
 }
 .social {
   text-align: center;
   color: #ffffff;
 }
 .social a {
-  font-size: 30px;
+  font-size: 20px;
   display: inline-block;
   text-align: center;
   margin: 0 30px;
@@ -166,3 +166,4 @@ style.css
   color:#ffffff;
   font-family: "Times New Roman", Times, serif;
 }
+
