--- a/css/crudsStyle.css
+++ b/css/crudsStyle.css
@@ -1,5 +1,4 @@
-body
-{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -11,8 +10,7 @@ body
     border-bottom-width: 1px;
     box-shadow: inset 0 0 0 9999px var(--bs-table-accent-bg);
 }
-.car-table
-{
+.car-table {
     width: 90%;
     margin-left: auto;
     margin-right: auto;
@@ -21,27 +19,22 @@ body
     z-index: 1;
     transform: translateX(0%);
 }
-h4
-{
+h4 {
     display: inline-block;
 }
 
-.add-del-btn
-{
+.add-del-btn {
     width: 100%;
     display: flex;
     justify-content: flex-end;
 }
-.Add-Delete-btn
-{
+.Add-Delete-btn {
     margin-top: 10px;
     width:130px;
 }
-.car-img
-{
+.car-img {
     width: 10px;
 }
-td
-{
-text-align: center;
+td {
+    text-align: center;
 }
